Name:               libffi
cabal-version:      >= 1.8
Version:            0.2
Description:        A binding to libffi, allowing C functions of types only known at runtime to be called from Haskell.
License:            BSD3
License-file:       LICENSE
Copyright:          Remi Turk 2008-2009
Author:             Remi Turk
Maintainer:         remi.turk@gmail.com
Homepage:           http://haskell.org/haskellwiki/Library/libffi
Stability:          alpha
Synopsis:           A binding to libffi
Tested-With:        GHC == 7.0.4
                  , GHC == 7.2.2
                  , GHC == 7.4.2
                  , GHC == 7.6.3
                  , GHC == 7.8.4
                  , GHC == 7.10.3
                  , GHC == 8.0.2
                  , GHC == 8.2.2
                  , GHC == 8.4.4
                  , GHC == 8.6.5
                  , GHC == 8.8.4
                  , GHC == 8.10.7
                  , GHC == 9.0.2
                  , GHC == 9.2.2
extra-source-files: CHANGELOG.md, README.md
Build-Type:         Simple
Category:           Foreign

source-repository head
  type:                git
  location:            https://github.com/remiturk/libffi

library
  build-depends:       base >= 3 && < 5, bytestring
  exposed-modules:     Foreign.LibFFI,
                       Foreign.LibFFI.Base,
                       Foreign.LibFFI.Types,
                       Foreign.LibFFI.FFITypes,
                       Foreign.LibFFI.Internal
  pkgconfig-depends:   libffi
  extra-libraries:     ffi
  includes:            ffi.h ffitarget.h
