cabal-version:      >= 1.10
name:               libffi-examples
version:            0.1
license:            BSD3
license-file:       LICENSE
synopsis:           libffi examples
description:        libffi examples.
copyright:          Remi Turk 2008-2009, Ryan Scott 2022
author:             Ryan Scott
maintainer:         Ryan Scott <ryan.gl.scott@gmail.com>
homepage:           https://github.com/remiturk/libffi
bug-reports:        https://github.com/remiturk/libffi/issues
build-type:         Simple
category:           Foreign
Tested-With:        GHC == 7.0.4
                  , GHC == 7.2.2
                  , GHC == 7.4.2
                  , GHC == 7.6.3
                  , GHC == 7.8.4
                  , GHC == 7.10.3
                  , GHC == 8.0.2
                  , GHC == 8.2.2
                  , GHC == 8.4.4
                  , GHC == 8.6.5
                  , GHC == 8.8.4
                  , GHC == 8.10.7
                  , GHC == 9.0.2
                  , GHC == 9.2.2
extra-source-files: README.md

source-repository head
  type:                 git
  location:             https://github.com/remiturk/libffi
  subdir:               examples

executable ccall
    main-is:            CCall.hs
    build-depends:      base >= 4 && < 5
                      , containers
                      , libffi
                      , mtl
                      , parsec
    if !os(windows)
      build-depends:    unix
    hs-source-dirs:     .
    default-language:   Haskell2010

executable ctime
    main-is:            CTime.hs
    build-depends:      base >= 4 && < 5
                      , libffi
    if !os(windows)
      build-depends:    unix
    build-tool-depends: hsc2hs:hsc2hs
    hs-source-dirs:     .
    default-language:   Haskell2010

executable memspeed
    main-is:            MemSpeed.hs
    build-depends:      base >= 4 && < 5
                      , libffi
                      , old-time
    if !os(windows)
      build-depends:    unix
    hs-source-dirs:     .
    default-language:   Haskell2010
